<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_app_portfolio"
    tools:context=".AppPortfolioActivity">

    <TextView
        android:id="@+id/app_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_main_title"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/app_main_btn_1"
        android:layout_width="@dimen/portfolio_btn_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_title"
        android:layout_marginTop="@dimen/portfolio_btn_vertical_margin"
        android:layout_marginBottom="@dimen/portfolio_btn_vertical_margin"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/app_title_1"
        android:textSize="@dimen/portfolio_btn_text_size"
        android:textColor="@android:color/white"
        android:background="@color/portfolio_btn_primary_color"/>

    <Button
        android:id="@+id/app_main_btn_2"
        android:layout_width="@dimen/portfolio_btn_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_main_btn_1"
        android:layout_marginTop="@dimen/portfolio_btn_vertical_margin"
        android:layout_marginBottom="@dimen/portfolio_btn_vertical_margin"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/app_title_2"
        android:textSize="@dimen/portfolio_btn_text_size"
        android:textColor="@android:color/white"
        android:background="@color/portfolio_btn_primary_color"/>

    <Button
        android:id="@+id/app_main_btn_3"
        android:layout_width="@dimen/portfolio_btn_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_main_btn_2"
        android:layout_marginTop="@dimen/portfolio_btn_vertical_margin"
        android:layout_marginBottom="@dimen/portfolio_btn_vertical_margin"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/app_title_3"
        android:textSize="@dimen/portfolio_btn_text_size"
        android:textColor="@android:color/white"
        android:background="@color/portfolio_btn_primary_color"/>

    <Button
        android:id="@+id/app_main_btn_4"
        android:layout_width="@dimen/portfolio_btn_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_main_btn_3"
        android:layout_marginTop="@dimen/portfolio_btn_vertical_margin"
        android:layout_marginBottom="@dimen/portfolio_btn_vertical_margin"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/app_title_4"
        android:textSize="@dimen/portfolio_btn_text_size"
        android:textColor="@android:color/white"
        android:background="@color/portfolio_btn_primary_color"/>

    <Button
        android:id="@+id/app_main_btn_5"
        android:layout_width="@dimen/portfolio_btn_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_main_btn_4"
        android:layout_marginTop="@dimen/portfolio_btn_vertical_margin"
        android:layout_marginBottom="@dimen/portfolio_btn_vertical_margin"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/app_title_5"
        android:textSize="@dimen/portfolio_btn_text_size"
        android:textColor="@android:color/white"
        android:background="@color/portfolio_btn_primary_color"/>

    <Button
        android:id="@+id/app_main_btn_6"
        android:layout_width="@dimen/portfolio_btn_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_main_btn_5"
        android:layout_marginTop="@dimen/portfolio_btn_vertical_margin"
        android:layout_marginBottom="@dimen/portfolio_btn_vertical_margin"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/app_title_6"
        android:textSize="@dimen/portfolio_btn_text_size"
        android:textColor="@android:color/white"
        android:background="@color/portfolio_btn_primary_color"/>

</RelativeLayout>
